--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -21,7 +21,7 @@
                         <div class="diamond"></div>
                     </span>
                     <span class="list-view-col ag" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};"></span>
-                    <span class="list-edit-col rename" ng-model="master.name" ng-class="{'selected': master.edit[data.viewState]}"></span>
+                    <span class="list-edit-col rename" ng-model="master.displayName" ng-class="{'selected': master.edit[data.viewState]}"></span>
                 </li>
             </ul>
         </li>
