--- a/purple-pill/templates/specimen2.html
+++ b/purple-pill/templates/specimen2.html
@@ -9,29 +9,17 @@
         <div id="font-by" ng-if="selectedSpecimen.name != 'glyph range'">
             font by <select ng-model="filterOptions.selectedFontby" ng-options="fontby for fontby in fontbys"></select>
         </div>
-    </div>
-   
+    </div>  
 </div>
 
 
-<div id="specimen-content" rubberband viewport-watcher>   
+<div id="specimen-content" viewport-watcher>   
     <!-- standard view -->
-    <div id="non-glyph-range" ng-if="selectedSpecimen.name != 'glyph range'">
+    <div id="non-glyph-range">
         <ul>
             <li ng-repeat="glyph in filteredGlyphs track by glyph.glyphId" ng-style="{'height': (fontSize * lineHeight) + 'px'}">
                 <glyph mastername="{{glyph.master.name}}" sequence="{{glyph.master.sequenceId}}" master="{{glyph.master.masterId}}" glyph="{{glyph.glyphName}}" ng-style="{'height': fontSize + 'px'}" class="spec-glyph-box catchme unselectable" ng-class="{'selected-glyph':askIfEditGlyph(glyph.glyphName, glyph.master.masterId, glyph.master.sequenceId)}"></glyph>
             </li>
         </ul>
-    </div>
-    
-    <!-- glyph range -->
-    <div id="glyph-range" ng-if="selectedSpecimen.name == 'glyph range'">
-        <div ng-repeat="sequence in data.sequences">
-            <ul ui-sortable="sortableOptions" class="glyph-range-master glyph-range" ng-model="master.glyphs" ng-repeat="master in sequence.masters" ng-if="master.display && master.type == 'redpill'">
-                <li ng-style="{'margin': (fontSize / 6) + 'px'}" ng-repeat="glyph in filteredRangeGlyphs=(master.glyphs | rangeFilter:filterOptions.filter)" class="no-rubberband spec-glyph-box-range">
-                    <glyph mastername="{{master.name}}" sequence="{{sequence.id}}" master="{{master.id}}" glyph="{{glyph.value}}" ng-style="{'height': fontSize + 'px'}" class="spec-glyph-box catchme unselectable no-rubberband" ng-class="{'selected-glyph':glyph.edit}"></glyph>
-                </li>
-            </ul>
-        </div>
     </div>
 </div>
