--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -42,10 +42,6 @@
         padding: 20px;
     }
     
-    specimen2 {
-        height: 50%;
-    }
-    
     .unselectable {                
         -webkit-touch-callout: none;
         -webkit-user-select: none;
@@ -199,7 +195,7 @@
                 padding: 16px;
             }
             
-            specimen, masters, designspace, instances, parameters {
+            specimen, specimen2, masters, designspace, instances, parameters {
                 display: block;
                 position: relative;
             }
