--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -76,6 +76,12 @@
 
 
 /****** testing stuff *****/
+
+    #temp-parameters input {
+        width: 40px;
+        margin-bottom: 8px;
+    }
+
 	/*
 	.start-view-selection {
 	    background: purple!important;
