--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -1,11 +1,13 @@
-<div class="standard-padding">
-    <input ng-model="data.overallWidth" ng-change="data.scale('overallWidth', data.overallWidth)"> width<br>
-    <input ng-model="data.xTranslate" ng-change="data.scale('xTranslate', data.xTranslate)"> xTrans<br>
-    <input ng-model="data.yTranslate" ng-change="data.scale('yTranslate', data.yTranslate)"> yTrans<br>
-    <input ng-model="data.heightFactor" ng-change="data.scale('heightFactor', data.heightFactor)"> height<br>
-    <button ng-click="data.addRule()">+</button>
+<div id="temp-parameters" class="standard-padding">
+    <input ng-model="data.weightFactor" ng-change="data.scale('weightFactor', data.weightFactor, 5, false)"> weight<br>
+    <input ng-model="data.widthFactor" ng-change="data.scale('widthFactor', data.widthFactor, 4, false)"> width<br>
+    <input ng-model="data.heightFactor" ng-change="data.scale('heightFactor', data.heightFactor, 4, false)"> height<br>
+    <input ng-model="data.sidebearingLeft" ng-change="data.scale('sidebearingLeft', data.sidebearingLeft, 4, true)"> Sidebearing left<br>
+    <input ng-model="data.sidebearingRight" ng-change="data.scale('sidebearingRight', data.sidebearingRight, 4, true)"> Sidebearing Right<br>
 </div>
 
+<!--
+    <button ng-click="data.addRule()">+</button>
 <div id="inspector" class="standard-padding">
     <div class="inspector-header">
         <span>{{data.projectName}}</span>
@@ -75,4 +77,6 @@
 </div>
 
 <div id="parameter-slider"></div>
+
+-->
 
