--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -588,6 +588,7 @@
     .design-space-container {
         width: 100%;
         height: 100%;
+        padding: 40px;
     }
 
     .choose-space-type {
@@ -608,7 +609,6 @@
     }
 
     .drop-area {
-        height: 100%;
         width: 100%;
         background: #fff;
         border: 1px solid #ddd;
