--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -1,13 +1,15 @@
 <div id="temp-parameters" class="standard-padding">
-    <input ng-model="data.weightFactor" ng-change="data.scale('weightFactor', data.weightFactor, 5, false)"> weight<br>
-    <input ng-model="data.widthFactor" ng-change="data.scale('widthFactor', data.widthFactor, 4, false)"> width<br>
-    <input ng-model="data.heightFactor" ng-change="data.scale('heightFactor', data.heightFactor, 4, false)"> height<br>
-    <input ng-model="data.sidebearingLeft" ng-change="data.scale('sidebearingLeft', data.sidebearingLeft, 4, true)"> Sidebearing left<br>
-    <input ng-model="data.sidebearingRight" ng-change="data.scale('sidebearingRight', data.sidebearingRight, 4, true)"> Sidebearing Right<br>
+    <input ng-model="data.weightFactor" ng-change="data.editParameter('weightFactor', data.weightFactor, 1, false)"> weight<br>
+    <input ng-model="data.widthFactor" ng-change="data.editParameter('widthFactor', data.widthFactor, 2, false)"> width<br>
+    <input ng-model="data.heightFactor" ng-change="data.editParameter('heightFactor', data.heightFactor, 2, false)"> height<br>
+    <input ng-model="data.sidebearingLeft" ng-change="data.editParameter('sidebearingLeft', data.sidebearingLeft, 2, true)"> Sidebearing left<br>
+    <input ng-model="data.sidebearingRight" ng-change="data.editParameter('sidebearingRight', data.sidebearingRight, 2, true)"> Sidebearing Right<br>
+    
+    <button ng-click="data.addNewMaster()">+</button>
 </div>
 
 <!--
-    <button ng-click="data.addRule()">+</button>
+    
 <div id="inspector" class="standard-padding">
     <div class="inspector-header">
         <span>{{data.projectName}}</span>
