--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -4,8 +4,8 @@
     <input ng-model="data.heightFactor" ng-change="data.editParameter('heightFactor', data.heightFactor, 2, false)"> height<br>
     <input ng-model="data.sidebearingLeft" ng-change="data.editParameter('sidebearingLeft', data.sidebearingLeft, 2, true)"> Sidebearing left<br>
     <input ng-model="data.sidebearingRight" ng-change="data.editParameter('sidebearingRight', data.sidebearingRight, 2, true)"> Sidebearing Right<br>
-    
-    <button ng-click="data.addNewMaster()">+</button>
+
+    <button ng-click="data.duplicateMasters()">duplicate master</button>
 </div>
 
 <!--
