#332 duplicate and delete, on the right buttons

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -880,7 +880,7 @@
             .list-sequence-col {
                 float: left;
                 width: 24px;
-                height: 28px;
+                height: 100%;
                 position: relative;
             }
             
