--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -589,6 +589,8 @@
         width: 100%;
         height: 100%;
         padding: 40px;
+        color: #ddd;
+        font-style: italic;
     }
 
     .choose-space-type {
@@ -714,8 +716,14 @@
     }      
       
         .slider-axis {
-            stroke: #000;
+            stroke: #ddd;
             stroke-width: 2;
+            fill: none;
+        }
+        
+        .slider-axis-active {
+            stroke: #000;
+            stroke-width: 3;
             fill: none;
         }
 
