--- a/purple-pill/templates/designspace.html
+++ b/purple-pill/templates/designspace.html
@@ -46,8 +46,8 @@
     
     <div class="" ng-show="data.currentDesignSpace.type != 'x'">
         <control ng-if="data.currentDesignSpace.type == 'Control'">
-            <div class="slider-input-container" ng-repeat="axis in data.currentInstance.axes" ng-style="{'top': ($index * 50 + 45) + 'px'}">
-                <input ng-model="axis.value" class="slider-input-output">%
+            <div class="slider-input-container" ng-repeat="axis in data.currentInstance.axes" ng-style="{'top': ($index * 40 + 45) + 'px'}">
+                <input ng-hide="data.currentInstance.axes.length == 2 && $index == 1" counter="{{$index}}" ng-model="axis.value" class="slider-input-output">
             </div>
             <select class="left-label-select" ng-change="changeMainMaster()" ng-model="data.currentDesignSpace.mainMaster" ng-options="index as data.findMaster(master.masterName).displayName for (index, master) in data.currentDesignSpace.masters" ng-style="{'top': ((data.currentDesignSpace.masters.length - 2) * 50 + 43) + 'px'}" ng-if="data.currentDesignSpace.masters.length > 2"></select>
         </control>
