--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -579,6 +579,7 @@
     .design-space {
         height: calc(100% - 32px);
         background: #fff;
+        overflow: scroll;
     }
 
     .unconfigured {
