--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -11,28 +11,29 @@
     </div>
 </localmenu>
 
-
-<div id="masters-list">
-    <ul>
-        <li ng-repeat="sequence in data.sequences">
-            <ul ui-sortable="sortableOptionsMasters" ng-model="sequence.masters" class="list-ul">
-                <li master="{{master.id}}" sequence="{{sequence.id}}" display="{{master.display}}" ng-repeat="master in sequence.masters" class="list-li" ng-class="{'selected': master.edit[data.viewState]}">
-                    <span class="list-sequence-col" ng-class="{start : $first && !$last, end : $last, middle : $middle, solo : $first && $last}" ng-mouseover="whileDrag(master, $index)" ng-mousedown="startDrag(master, $index)">
-                        <div class="diamond"></div>
-                    </span>
-                    <span class="list-view-col ag" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};"></span>
-                    <span class="list-edit-col rename" ng-model="master.displayName" ng-class="{'selected': master.edit[data.viewState]}"></span>
-                </li>
-            </ul>
-        </li>
-    </ul>
-</div>
-
-<div id="masters-tools">
-    <div title="import ufo" id="import-ufo" ng-click="importUfo();" class="master-tool push-button">
-        <img src="img/importUfo.png">
+<div class="panel-border panel-border-with-menu">
+    <div id="masters-list">
+        <ul>
+            <li ng-repeat="sequence in data.sequences">
+                <ul ui-sortable="sortableOptionsMasters" ng-model="sequence.masters" class="list-ul">
+                    <li master="{{master.id}}" sequence="{{sequence.id}}" display="{{master.display}}" ng-repeat="master in sequence.masters" class="list-li" ng-class="{'selected': master.edit[data.viewState]}">
+                        <span class="list-sequence-col" ng-class="{start : $first && !$last, end : $last, middle : $middle, solo : $first && $last}" ng-mouseover="whileDrag(master, $index)" ng-mousedown="startDrag(master, $index)">
+                            <div class="diamond"></div>
+                        </span>
+                        <span class="list-view-col ag" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};"></span>
+                        <span class="list-edit-col rename" ng-model="master.displayName" ng-class="{'selected': master.edit[data.viewState]}"></span>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </div>
-    <div title="duplicate master(s)" id="duplicate-master" ng-click="duplicateMasters();" class="master-tool push-button">
-        <img src="img/duplicateMaster.png">
+    
+    <div id="masters-tools">
+        <div title="import ufo" id="import-ufo" ng-click="importUfo();" class="master-tool push-button">
+            <img src="img/importUfo.png">
+        </div>
+        <div title="duplicate master(s)" id="duplicate-master" ng-click="duplicateMasters();" class="master-tool push-button">
+            <img src="img/duplicateMaster.png">
+        </div>
     </div>
 </div>
