--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -1,86 +1,87 @@
-<div id="temp-parameters" class="standard-padding">
-    <div ng-repeat="parameter in parameters">
-        * <input ng-model="parameter.factor" ng-blur="data.setParameter(parameter, 'factor')"> 
-        + <input ng-model="parameter.summand" ng-blur="data.setParameter(parameter, 'summand')"> 
-        {{parameter.name}}
+<div class="panel-border">
+    <div id="temp-parameters" class="standard-padding">
+        <div ng-repeat="parameter in parameters">
+            * <input ng-model="parameter.factor" ng-blur="data.setParameter(parameter, 'factor')"> 
+            + <input ng-model="parameter.summand" ng-blur="data.setParameter(parameter, 'summand')"> 
+            {{parameter.name}}
+        </div>
+        
+    
+        
+        <button ng-click="data.getParameter()">get</button>
     </div>
     
-
-    
-    <button ng-click="data.getParameter()">get</button>
-</div>
-
-<!--
-    
-<div id="inspector" class="standard-padding">
-    <div class="inspector-header">
-        <span>{{data.projectName}}</span>
-    </div>
-    <div ng-repeat="sequence in data.sequences">
-        <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit[data.viewState] && master.type != 'test'">
-            <div class="inspector-header">
-                <arrow></arrow>
-                <span ng-class="{'inspector-inactive' : !master.edit[data.viewState]}">{{master.displayName}}</span>
-            </div>
-            <div class="inspector-branche" ng-repeat="glyph in master.glyphs" ng-if="glyph.edit">
+    <!--
+        
+    <div id="inspector" class="standard-padding">
+        <div class="inspector-header">
+            <span>{{data.projectName}}</span>
+        </div>
+        <div ng-repeat="sequence in data.sequences">
+            <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit[data.viewState] && master.type != 'test'">
                 <div class="inspector-header">
                     <arrow></arrow>
-                    <span>{{glyph.value}}</span>
+                    <span ng-class="{'inspector-inactive' : !master.edit[data.viewState]}">{{master.displayName}}</span>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div id="parameters-selection">
-    <div id="parameters-of-master" ng-if="areMastersSelected()">
-        <div class="parameters-selection-head">Master</div><div class="parameters-add" ng-click="parametersWindow($event, 1, 'master')">+</div>
-        <div class="parameters-selection-body">
-            <div ng-repeat="parameter in filteredMasterParameters=(data.sequences | mastersInEditFilter)" class="parameter-row">
-                <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
-                    <div class="parameter-key"><span ng-if="$index == 0">{{parameter.displayName}}</span></div>
-                    <div class="parameter-operator">{{operator.operator}}</div>
-                    <div class="parameter-value"><input ng-model="operator.value" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)" class="ng-input-focus"></div>
+                <div class="inspector-branche" ng-repeat="glyph in master.glyphs" ng-if="glyph.edit">
+                    <div class="inspector-header">
+                        <arrow></arrow>
+                        <span>{{glyph.value}}</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     
-    <div id="parameters-of-glyph" ng-if="areGlyphsSelected()">
-        <div class="parameters-selection-head">Glyph</div><div class="parameters-add" ng-click="parametersWindow($event, 2, 'glyph')">+</div>
-        <div class="parameters-selection-body">
-            <div ng-repeat="parameter in filteredGlyphParameters" class="parameter-row">
-                <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
-                    <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
-                    <div class="parameter-operator">{{operator.operator}}</div>
-                    <div class="parameter-value">
-                        <input ng-model="operator.low" ng-blur="editParameter(parameter, operator)" class="ng-input-focus align-right"><span ng-if="operator.range" > to <input ng-model="operator.high" ng-blur="editParameter(parameter, operator)" class="ng-input-focus"></span>
+    <div id="parameters-selection">
+        <div id="parameters-of-master" ng-if="areMastersSelected()">
+            <div class="parameters-selection-head">Master</div><div class="parameters-add" ng-click="parametersWindow($event, 1, 'master')">+</div>
+            <div class="parameters-selection-body">
+                <div ng-repeat="parameter in filteredMasterParameters=(data.sequences | mastersInEditFilter)" class="parameter-row">
+                    <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
+                        <div class="parameter-key"><span ng-if="$index == 0">{{parameter.displayName}}</span></div>
+                        <div class="parameter-operator">{{operator.operator}}</div>
+                        <div class="parameter-value"><input ng-model="operator.value" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)" class="ng-input-focus"></div>
                     </div>
                 </div>
-                <div class="parameter-operation-row" ng-if="hasInheritance(parameter)">
-                    <div class="parameter-key"></div>
-                    <div class="parameter-operator">-></div>
-                    <div class="parameter-value"><span class="calculated-value">{{calculatedValue(parameter)}}</span></div>
+            </div>
+        </div>
+        
+        <div id="parameters-of-glyph" ng-if="areGlyphsSelected()">
+            <div class="parameters-selection-head">Glyph</div><div class="parameters-add" ng-click="parametersWindow($event, 2, 'glyph')">+</div>
+            <div class="parameters-selection-body">
+                <div ng-repeat="parameter in filteredGlyphParameters" class="parameter-row">
+                    <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
+                        <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
+                        <div class="parameter-operator">{{operator.operator}}</div>
+                        <div class="parameter-value">
+                            <input ng-model="operator.low" ng-blur="editParameter(parameter, operator)" class="ng-input-focus align-right"><span ng-if="operator.range" > to <input ng-model="operator.high" ng-blur="editParameter(parameter, operator)" class="ng-input-focus"></span>
+                        </div>
+                    </div>
+                    <div class="parameter-operation-row" ng-if="hasInheritance(parameter)">
+                        <div class="parameter-key"></div>
+                        <div class="parameter-operator">-></div>
+                        <div class="parameter-value"><span class="calculated-value">{{calculatedValue(parameter)}}</span></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    
+    
+    <div id="parameters-control-panel" class="control-panel" ng-if="data.parametersPanel > 0" ng-style="{'top': parameterPanelTop, 'left': parameterPanelLeft}">
+        <div id="control-panel-parameters">
+            <div ng-repeat="parameter in parameters" ng-class="{'selected': parameter == windowParameter}" class="control-panel-parameter control-panel-button push-button" ng-click="addParameter(parameter)">{{parameter}}</div>
+        </div>
+        <div id="control-panel-operators">
+            <div ng-repeat="operator in operators" ng-class="{'selected': operator == windowOperator}" class="control-panel-operator control-panel-button push-button" ng-click="addOperator(operator)">{{operator}}</div>
+        </div>
+        <div class="control-panel-cancel control-panel-button push-button" ng-click="data.parametersPanel = 0">
+            Cancel
+        </div>
+    </div>
+    
+    <div id="parameter-slider"></div>
+    
+    -->
 </div>
-
-
-<div id="parameters-control-panel" class="control-panel" ng-if="data.parametersPanel > 0" ng-style="{'top': parameterPanelTop, 'left': parameterPanelLeft}">
-    <div id="control-panel-parameters">
-        <div ng-repeat="parameter in parameters" ng-class="{'selected': parameter == windowParameter}" class="control-panel-parameter control-panel-button push-button" ng-click="addParameter(parameter)">{{parameter}}</div>
-    </div>
-    <div id="control-panel-operators">
-        <div ng-repeat="operator in operators" ng-class="{'selected': operator == windowOperator}" class="control-panel-operator control-panel-button push-button" ng-click="addOperator(operator)">{{operator}}</div>
-    </div>
-    <div class="control-panel-cancel control-panel-button push-button" ng-click="data.parametersPanel = 0">
-        Cancel
-    </div>
-</div>
-
-<div id="parameter-slider"></div>
-
--->
-
