--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -122,7 +122,7 @@
 		#view-buttons {
 		    position: fixed;
 		    top: 0;
-		    left: calc(50% - 113px);
+		    left: calc(50% - 154px);
 			padding: 8px;
 		}
 		
@@ -134,7 +134,13 @@
 				font-size: 0.8em;
 				border: 1px solid #ddd;
 				cursor: default;
+				width: 100px;
+				text-align: center;
 			}
+			
+    			 #view-buttons .menu-item:last-child{
+    			     margin-right: 0;
+    			 }
 			
 			#view-buttons .menu-item:hover, #view-buttons .menu-item-current {
 				border: 1px solid #000;
